--- a/src/ViewModels.ApplicationState.Tests/ViewModels.ApplicationState.Tests.csproj
+++ b/src/ViewModels.ApplicationState.Tests/ViewModels.ApplicationState.Tests.csproj
@@ -12,7 +12,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CR.ViewModels.Core.Tests</RootNamespace>
     <AssemblyName>CR.ViewModels.Core.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">15.0</VisualStudioVersion>
@@ -22,6 +22,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +44,9 @@
     <DocumentationFile>bin\Release\CR.ViewModels.Core.Tests.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CR.ViewModels.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CR.ViewModels.Core.1.0.0-rc0002\lib\netstandard2.0\CR.ViewModels.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.CodeCoverage.Shim, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeCoverage.1.0.3\lib\netstandard1.0\Microsoft.VisualStudio.CodeCoverage.Shim.dll</HintPath>
@@ -72,10 +76,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ViewModels.Core\ViewModels.Core.csproj">
-      <Project>{F270C246-201F-4289-BEBE-8E59BDF4F270}</Project>
-      <Name>ViewModels.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ViewModels.ApplicationState\ViewModels.ApplicationState.csproj">
       <Project>{A4A3A5EF-3F85-47A5-A39C-DF936CAE60AC}</Project>
       <Name>ViewModels.ApplicationState</Name>
