--- a/src/ViewModels.ApplicationState.Tests/ViewModels.ApplicationState.Tests.csproj
+++ b/src/ViewModels.ApplicationState.Tests/ViewModels.ApplicationState.Tests.csproj
@@ -45,7 +45,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CR.ViewModels.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CR.ViewModels.Core.1.0.0-rc0002\lib\netstandard2.0\CR.ViewModels.Core.dll</HintPath>
+      <HintPath>..\packages\CR.ViewModels.Core.1.0.0\lib\netstandard2.0\CR.ViewModels.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.CodeCoverage.Shim, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
