--- a/src/ViewModels.ApplicationState.Tests/packages.config
+++ b/src/ViewModels.ApplicationState.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CR.CodeStyle.CSharp.Full" version="1.0.1" targetFramework="net471" developmentDependency="true" />
-  <package id="CR.ViewModels.Core" version="1.0.0-rc0002" targetFramework="net471" />
+  <package id="CR.ViewModels.Core" version="1.0.0" targetFramework="net471" />
   <package id="Microsoft.CodeCoverage" version="1.0.3" targetFramework="net471" />
   <package id="Microsoft.NET.Test.Sdk" version="15.7.2" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
