--- a/src/ViewModels.ApplicationState/ViewModels.ApplicationState.csproj
+++ b/src/ViewModels.ApplicationState/ViewModels.ApplicationState.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CR.ViewModels.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CR.ViewModels.Core.1.0.0-rc0002\lib\netstandard2.0\CR.ViewModels.Core.dll</HintPath>
+      <HintPath>..\packages\CR.ViewModels.Core.1.0.0\lib\netstandard2.0\CR.ViewModels.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
