Allow any minor version of our dependencies

--- a/src/ViewModels.ApplicationState/packages.config
+++ b/src/ViewModels.ApplicationState/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CR.CodeStyle.CSharp.Full" version="1.0.1" targetFramework="net471" developmentDependency="true" />
-  <package id="CR.ViewModels.Core" version="1.0.0" targetFramework="net471" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
-  <package id="StyleCop.Analyzers" version="1.1.0-beta006" targetFramework="net471" developmentDependency="true" />
+  <package id="CR.CodeStyle.CSharp.Full" version="1.0.1" allowedVersions="1.*" targetFramework="net471" developmentDependency="true" />
+  <package id="CR.ViewModels.Core" version="1.0.0" allowedVersions="1.*" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" allowedVersions="11.*" targetFramework="net472" />
+  <package id="StyleCop.Analyzers" version="1.1.0-beta006" allowedVersions="1.*" targetFramework="net471" developmentDependency="true" />
 </packages>
