--- a/src/ViewModels.ApplicationState/ViewModels.ApplicationState.csproj
+++ b/src/ViewModels.ApplicationState/ViewModels.ApplicationState.csproj
@@ -39,7 +39,7 @@
     <PackageReference Include="CR.CodeStyle.CSharp.Full" Version="[1.0.1,2.0.0-0)">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-	<PackageReference Include="CR.ViewModels.Core" Version="[1.0.0,2.0.0-0)" />
+	<PackageReference Include="CR.ViewModels.Core" Version="[1.0.0,1.999.999)" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta006\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
