--- a/src/ViewModels.ApplicationState/ViewModels.ApplicationState.nuspec
+++ b/src/ViewModels.ApplicationState/ViewModels.ApplicationState.nuspec
@@ -9,7 +9,7 @@
         <owners>Cognisant Research</owners>
         <projectUrl>https://github.com/Cognisant/ViewModels.ApplicationState</projectUrl>
         <licenseUrl>https://github.com/cognisant/ViewModels.ApplicationState/blob/master/LICENSE</licenseUrl>
-        <iconUrl>https://github.com/cognisant/ViewModels.ApplicationState/blob/master/logo.png</iconUrl>
+        <iconUrl>https://raw.githubusercontent.com/cognisant/ViewModels.ApplicationState/master/logo.png</iconUrl>
         <copyright>Cognisant Research 2018</copyright>
         <releaseNotes>https://GitHub.com/Cognisant/ViewModels.ApplicationState/releases/tag/$tag$</releaseNotes>
     </metadata>
